--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddlAuto=create-drop
+spring.jpa.hibernate.ddlAuto=update
 
 jwt.secret.key=8F71ED9DB415E97C48978B1D2A6D9fasddfasdfasdeasdfadsfadsf
 jwt.time.expiration=86400000
